Updated css and html

--- a/Index.html
+++ b/Index.html
@@ -5,17 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>HTML/CSS/JS TEST1 </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="C:\Dev\Module1/main.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="C:\Dev\Module1\main.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Sans">
+
    
 </head>
 <body>
-    <h1> This is the title to My Page! </h1>
-    <div id="startP">
-        <p class="Description">
-        This is a page that i will be using to test out the full stack of <strong>HTMl, CSS, and JavaScript!</strong> <br>
-        If you'd like, you can click <a href="https://www.youtube.com/michch333"> This link </a> to view <em>nothing.</em>
+        <div id="container">
+            <nav>
+                <Ul>
+                    <li class="AdoptMe"><a href="#AdoptMe">Adopt <span class="buzzword">Me</span></a></li>
+                    <li><a href="#AboutUs">About Us</a></li>
+                    <li><a href="#WhatWeDo">What We Do</a></li>
+                    <li><a href="#Benefits">Benefits</a></li>
+                    <li><a href="#OurBuddies">Our Buddies</a></li>
+                    <li class="popbutton"><a href="#ContactUs">Contact Us</a></li>
+                </Ul>
+            </nav>
+        </div>
+    <br>
+
+<div class="secondbody">
+    <div class="content">
+        <h1 class="largeheading">Do you think about <span class="buzzword">adopting</span> a friend?
+        </h1>
+
+        <p class="subtext">
+        We will help you choose the best buddy that fits your family and home perfectly.
         </p>
+
+        <button class="popbutton"> <a href="#">
+        Find out how
+        </a>
+        </button>
     </div>
+    <div class="puppic">
+
+
+
+    </div>
+</div>
 
     <script src="main.js"></script>
 </body>
