removed un needed files

--- a/Index.html
+++ b/Index.html
@@ -40,8 +40,7 @@
         </button>
     </div>
     <div class="puppic">
-
-
+        <img src="/bulldog.jpg" alt="This is a picture of a bulldog">
 
     </div>
 </div>
