--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,7 @@
                     <li><a href="#WhatWeDo">What We Do</a></li>
                     <li><a href="#Benefits">Benefits</a></li>
                     <li><a href="#OurBuddies">Our Buddies</a></li>
-                    <li class="popbutton"><a href="#ContactUs">Contact Us</a></li>
+                    <li class="ContactUs popbutton"><a href="#ContactUs">Contact Us</a></li>
                 </Ul>
             </nav>
         </div>
@@ -40,7 +40,6 @@
         </button>
     </div>
     <div class="puppic">
-        <img src="/bulldog.jpg" alt="This is a picture of a bulldog">
 
     </div>
 </div>
