added relative pathing

--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>HTML/CSS/JS TEST1 </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="C:\Dev\Module1\main.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="./main.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Sans">
 
    
@@ -44,6 +44,6 @@
     </div>
 </div>
 
-    <script src="main.js"></script>
+    <script src="./main.js"></script>
 </body>
 </html>
