made some changes to mobile look and feel. Hovers are correct and cleaned up messy code

--- a/Index.html
+++ b/Index.html
@@ -15,11 +15,11 @@
             <nav>
                 <Ul>
                     <li class="AdoptMe"><a href="#AdoptMe">Adopt <span class="buzzword">Me</span></a></li>
-                    <li><a href="#AboutUs">About Us</a></li>
-                    <li><a href="#WhatWeDo">What We Do</a></li>
-                    <li><a href="#Benefits">Benefits</a></li>
-                    <li><a href="#OurBuddies">Our Buddies</a></li>
-                    <li class="ContactUs popbutton"><a href="#ContactUs">Contact Us</a></li>
+                    <li class="MiddleM"><a href="#AboutUs">About Us</a></li>
+                    <li class="MiddleM"><a href="#WhatWeDo">What We Do</a></li>
+                    <li class="MiddleM"><a href="#Benefits">Benefits</a></li>
+                    <li class="MiddleM"><a href="#OurBuddies">Our Buddies</a></li>
+                    <li class="ContactUs popbutton" id= "ContactUs"><a href="#ContactUs">Contact Us</a></li>
                 </Ul>
             </nav>
         </div>
